--- a/dresses.html
+++ b/dresses.html
@@ -19,9 +19,10 @@
             <nav>
                 <span style="font-size: 30px; cursor: pointer; " onclick="openNav()">&#9776; </span>
                 <img src="8ADA13E4-B2DB-4AAE-9FBB-EEDBDD587A3D (1).jpg" width="250px" height="50px" class="img1">
-                <img src="IMG-3786.jpg" width="30px" height="30px" style="padding-left: 370px;margin-top: 0;">
-                <img src="IMG-3784.PNG" width="30px" height="30px" style="padding-left: 25px; margin-top: 0;">
-                <img src="IMG-3787.jpg" width="30px" height="30px" style="padding-left: 25px; margin-top: 0;">
+                <i class="fa fa-search " aria-hidden="true" style="padding-left: 370px; font-size: 25px;"></i>
+                <i class="fa fa-bell " aria-hidden="true" style="padding-left:25px ; font-size: 25px;"></i>
+                <i class="fa fa-shopping-bag " aria-hidden="true" style="padding-left: 25px; font-size: 25px;"></i>
+                    
             </nav>
         </header>
         <p style="margin-top: 2%; color: black; font-size: 30px; text-align: center;"> <b>Tops</b></p>
