He & She website Created

--- a/html/jumpsuits.html
+++ b/html/jumpsuits.html
@@ -31,40 +31,12 @@
             
         </header>
         <p style="margin-top: 2%; color: black; font-size: 30px; margin-left: 43%;"> <b>Jumpsuits</b></p>
-        <div class="container">
-            <div class="box1">
-                <img src="../images/IMG-3907.png" width="250px" height="350px">
-                <p style="text-align: center; font-size: 20px; color: black; "> <b>SASSAFRAS</b> <br>Women Chambrey Jumpsuit<br> Rs.3699</p>
-            </div>
-            <div class="box2">
+         <div id="container">
 
-                <img src="../images/IMG-3908.png" width="250px" height="350px">
-                <p style="text-align: center; font-size: 20px; color: black; "> <b> SHEIN</b> <br>Women Basic Jumpsuit<br> Rs.2199</p>
-            </div>
-            <div class="box3">
-                <img src="../images/IMG-3909.png" width="250px" height="350px">
-                <p style="text-align: center; font-size: 20px; color: black; ">  <b> MANGO</b> <br>Solid Basic Jumpsuit<br> Rs.2149</p>
-            </div>
-         </div>
-         <div class="container">
-            <div class="box4">
-                <img src="../images/IMG-3910.png" width="250px" height="350px">
-                <p style="text-align: center; font-size: 20px; color: black; "> <b>MADAME</b> <br>Basic Jumpsuit<br> Rs.3500</p>
-            </div>
-            <div class="box5">
-                <img src="../images/IMG-3911.png" width="250px" height="350px">
-                <p style="text-align: center; font-size: 20px; color: black; "><b>H & M</b> <br>Embroidery Jumpsuit<br> Rs.4000</p>
-            </div>
-            <div class="box6">
-                <img src="../images/IMG-3912.png" width="250px" height="350px">
-                <p style="text-align: center; font-size: 20px; color: black; "> <b>Athena</b><br> Solid Pink Jumpsuit <br>Rs.3000</p>
-            </div>
-         </div>
-         <div class="container">
-            <div class="box7">
-                <img src="../images/IMG-3913.png" width="250px" height="350px">
-                <p style="text-align: center; font-size: 20px; color: black; "> <b> KASSUALLY</b> <br>Full Sleeves Jumpsuit<br> Rs.2500</p>
-            </div>
-         </div>
+        </div>
+        <script src="../js/index.js"></script>
+  
+        <script src="../js/jumpsuit.js"></script>
+    
     </body>
 </html>
