--- a/html/kurtis.html
+++ b/html/kurtis.html
@@ -5,7 +5,6 @@
         <link rel="stylesheet" href="../css/kurtis.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <title> Kurit's </title>
-        <script src="../js/index.js"></script>
     </head>
     <body>
         <header>
@@ -31,40 +30,12 @@
             
         </header>
         <p style="margin-top: 2%; color: black; font-size: 30px; margin-left: 38%;"> <b>Women Kurit's</b></p>
-        <div class="container">
-            <div class="box1">
-                <img src="../images/IMG-3856.png" width="250px" height="350px">
-                <p style="text-align: center; font-size: 20px; color: black; "> Women's crepe Straight <br>kurta <br> Rs.799</p>
-            </div>
-            <div class="box2">
+         <div id="container">
 
-                <img src="../images/IMG-3858.png" width="250px" height="350px">
-                <p style="text-align: center; font-size: 20px; color: black; "> Women's Polyster Crepe aline <br>kurta <br> Rs.599</p>
-            </div>
-            <div class="box3">
-                <img src="../images/IMG-3867.png" width="250px" height="350px">
-                <p style="text-align: center; font-size: 20px; color: black; ">  Janasya Women's turqoise Crepe <br>kurta with Plazo <br> Rs.1499</p>
-            </div>
-         </div>
-         <div class="container">
-            <div class="box4">
-                <img src="../images/IMG-3868.png" width="250px" height="350px">
-                <p style="text-align: center; font-size: 20px; color: black; "> Women's Rayon Printed <br>Kurta and Plazzo <br> Rs.1599</p>
-            </div>
-            <div class="box5">
-                <img src="../images/IMG-3869.png" width="250px" height="350px">
-                <p style="text-align: center; font-size: 20px; color: black; "> Women's Cotton Linig Print <br>Kurta with Sharara <br> Rs.1049</p>
-            </div>
-            <div class="box6">
-                <img src="../images/IMG-3870.png" width="250px" height="350px">
-                <p style="text-align: center; font-size: 20px; color: black; "> Women's Cotton Kurti<br> Hand Work Plazzo   <br>Rs.1299</p>
-            </div>
-         </div>
-         <div class="container">
-            <div class="box7">
-                <img src="../images/IMG-3872.png" width="250px" height="350px">
-                <p style="text-align: center; font-size: 20px; color: black; "> Women's Rayon Plain <br>Kurta with Printed Dupatta<br> Rs.2500</p>
-            </div>
-         </div>
+        </div>
+        <script src="../js/index.js"></script>
+  
+        <script src="../js/kurti.js"></script>
+    
     </body>
 </html>
