--- a/html/lehenga.html
+++ b/html/lehenga.html
@@ -31,40 +31,12 @@
             
         </header>
         <p style="margin-top: 2%; color: black; font-size: 30px; margin-left: 38%;"> <b>Bridal Lehenga's</b></p>
-        <div class="container">
-            <div class="box1">
-                <img src="../images/IMG-4011.JPG" width="250px" height="350px">
-                <p style="text-align: center; font-size: 20px; color: black; "> <b>SABYASACHI</b> <br>Embroided Kalidaar Lehenga<br> Rs.1,00,000</p>
-            </div>
-            <div class="box2">
+         <div id="container">
 
-                <img src="../images/IMG-4012.JPG" width="250px" height="350px">
-                <p style="text-align: center; font-size: 20px; color: black; "> <b> ANITA DONGRE</b> <br>Red & Orange Embroided Lehenga<br> Rs.1,50,000</p>
-            </div>
-            <div class="box3">
-                <img src="../images/IMG-4013.JPG" width="250px" height="350px">
-                <p style="text-align: center; font-size: 20px; color: black; ">  <b> SABYASACHI</b> <br>Red Embroided Lehenga<br> Rs.2,50,000</p>
-            </div>
-         </div>
-         <div class="container">
-            <div class="box4">
-                <img src="../images/IMG-4014.JPG" width="250px" height="350px">
-                <p style="text-align: center; font-size: 20px; color: black; "> <b>TARUN TAHILIANI</b> <br>Red Embroided Lehenga<br> Rs.1,50,999</p>
-            </div>
-            <div class="box5">
-                <img src="../images/IMG-4015.JPG" width="250px" height="350px">
-                <p style="text-align: center; font-size: 20px; color: black; "><b>MANISH MALHOTRA</b> <br>Red And Saffron Embroided Lehenga <br> Rs.2,00,000</p>
-            </div>
-            <div class="box6">
-                <img src="../images/IMG-4016.JPG" width="250px" height="350px">
-                <p style="text-align: center; font-size: 20px; color: black; "> <b>RITU KUMAR</b><br> Pink Embroided Lehenga<br>Rs.1,99,999</p>
-            </div>
-         </div>
-         <div class="container">
-            <div class="box7">
-                <img src="../images/IMG-4024.JPG" width="250px" height="350px">
-                <p style="text-align: center; font-size: 20px; color: black; "> <b> ANITA DONGRE</b> <br>Fuchsia and Gotapatti Lehenga<br> Rs.1,50,000</p>
-            </div>
-         </div>
+        </div>
+        <script src="../js/index.js"></script>
+  
+        <script src="../js/lehenga.js"></script>
+
     </body>
 </html>
