--- a/html/men.html
+++ b/html/men.html
@@ -5,6 +5,7 @@
         <link rel="stylesheet" href="../css/men.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <script src="../js/index.js"> </script>
+        <script src="../js/trial1.js"></script>
         <title> Men's Wear</title>
     </head>
     <body>
@@ -32,9 +33,9 @@
         <div class="container">
             <div class="box1">
                 <a href="shorts.html"><img src="../images/comfywear.png" width="250px" height="350px"></a>
-                <p style="text-align: center; font-size: 30px; color: black; "> <b>Shorts</b></p>
+                <p  style="text-align: center; font-size: 30px; color: black;"> <b>Shorts</b></p>
             </div>
-            <div class="box2">
+          <div class="box2">
 
                 <a href="jeanmen.html"><img src="../images/jeans.png" width="250px" height="350px"></a>
                 <p style="text-align: center; font-size: 30px; color: black; "> <b> Jeans</b></p>
