--- a/html/traditional.html
+++ b/html/traditional.html
@@ -30,40 +30,12 @@
             
         </header>
         <p style="margin-top: 2%; color: black; font-size: 30px; margin-left: 43%;"> <b>Traditional</b></p>
-        <div class="container">
-            <div class="box1">
-                <img src="../images/IMG-3848.JPG" width="250px" height="350px">
-                <p style="text-align: center; font-size: 20px; color: black; "> <b>Manyavar</b> <br>Men Velvet Shervani With Pant<br> Rs.5999</p>
-            </div>
-            <div class="box2">
+         <div id="container">
 
-                <img src="../images/IMG-3850.JPG" width="250px" height="350px">
-                <p style="text-align: center; font-size: 20px; color: black; "> <b> SG RAJASAHAB</b> <br>Men Solid Silk Sherwani<br> Rs.5009</p>
-            </div>
-            <div class="box3">
-                <img src="../images/IMG-3851.JPG" width="250px" height="350px">
-                <p style="text-align: center; font-size: 20px; color: black; ">  <b> House of Pataudi</b> <br>Silk Coatie<br> Rs.3099</p>
-            </div>
-         </div>
-         <div class="container">
-            <div class="box4">
-                <img src="../images/IMG-3852.JPG" width="250px" height="350px">
-                <p style="text-align: center; font-size: 20px; color: black; "> <b>House of Pataudi</b> <br> Bandhgala Blazer<br> Rs.3699</p>
-            </div>
-            <div class="box5">
-                <img src="../images/IMG-3853.JPG" width="250px" height="350px">
-                <p style="text-align: center; font-size: 20px; color: black; "><b>Manyavar</b> <br>Men Printed Jacket<br> Rs.3000</p>
-            </div>
-            <div class="box6">
-                <img src="../images/IMG-3854.JPG" width="250px" height="350px">
-                <p style="text-align: center; font-size: 20px; color: black; "> <b>See Designs</b><br> Asymmetric Straight Kurta <br>Rs.2999</p>
-            </div>
-         </div>
-         <div class="container">
-            <div class="box7">
-                <img src="../images/IMG-3855.JPG" width="250px" height="350px">
-                <p style="text-align: center; font-size: 20px; color: black; "> <b> SOJANYA</b> <br> Solid Straight Kurta<br> Rs.1699</p>
-            </div>
-         </div>
+        </div>
+       
+        <script src="../js/index.js"></script> 
+      <script src="../js/traditional.js"></script>
+   
     </body>
 </html>
