--- a/html/tshirt.html
+++ b/html/tshirt.html
@@ -5,8 +5,7 @@
         <link rel="stylesheet" href="../css/men.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <title> T-Shirt  </title>
-        <script src="../js/index.js"></script>
-    </head>
+  </head>
     <body>
         <header>
             <div id="mySidenav" class="sidenav">
@@ -31,40 +30,11 @@
             
         </header>
         <p style="margin-top: 2%; color: black; font-size: 30px; margin-left: 43%;"> <b>T-Shirts</b></p>
-        <div class="container">
-            <div class="box1">
-                <img src="../images/IMG-3808.JPG" width="250px" height="350px">
-                <p style="text-align: center; font-size: 20px; color: black; "> <b>U.S Polo</b> <br>Cotton T-Shirt Casual<br> Rs.1599</p>
-            </div>
-            <div class="box2">
+        <div id="container">
 
-                <img src="../images/IMG-3809.JPG" width="250px" height="350px">
-                <p style="text-align: center; font-size: 20px; color: black; "> <b> FIDO DIDO</b> <br>Solid Polo Collar T-Shirt<br> Rs.1449</p>
-            </div>
-            <div class="box3">
-                <img src="../images/IMG-3810.JPG" width="250px" height="350px">
-                <p style="text-align: center; font-size: 20px; color: black; ">  <b> HRX</b> <br>Printed Round Neck T-Shirt<br> Rs.1099</p>
-            </div>
-         </div>
-         <div class="container">
-            <div class="box4">
-                <img src="../images/IMG-3811.JPG" width="250px" height="350px">
-                <p style="text-align: center; font-size: 20px; color: black; "> <b>HRX</b> <br>Printed Round Neck T-Shirt<br> Rs.699</p>
-            </div>
-            <div class="box5">
-                <img src="../images/IMG-3818.JPG" width="250px" height="350px">
-                <p style="text-align: center; font-size: 20px; color: black; "><b>NIKE</b> <br>Round Neck T-Shirt<br> Rs.2000</p>
-            </div>
-            <div class="box6">
-                <img src="../images/IMG-3820.JPG" width="250px" height="350px">
-                <p style="text-align: center; font-size: 20px; color: black; "> <b>NIKE</b><br> Casual Round Neck T-Shirt <br>Rs.999</p>
-            </div>
-         </div>
-         <div class="container">
-            <div class="box7">
-                <img src="../images/IMG-3823.JPG" width="250px" height="350px">
-                <p style="text-align: center; font-size: 20px; color: black; "> <b> H&M</b> <br> Collar T-Shirt<br> Rs.1699</p>
-            </div>
-         </div>
+        </div>
+        <script src="../js/index.js"></script>
+  
+        <script src="../js/tshirt.js"></script>
     </body>
 </html>
