--- a/html/women.html
+++ b/html/women.html
@@ -52,12 +52,12 @@
                 <p style="text-align: center; font-size: 30px; color: black; "> <b> Bridal Lehenga's</b></p>
             </div>
             <div class="box5">
-                <a href="dresses.html"><img src="../images/tops.png" width="250px" height="350px"></a>
-                <p style="text-align: center; font-size: 30px; color: black; "><b>Tops</b></p>
+                <a href="dresses.html"><img src="../images/dreeses.png" width="250px" height="350px"></a>
+                <p style="text-align: center; font-size: 30px; color: black; "><b>Dresses</b></p>
             </div>
             <div class="box6">
-                <a href="tops.html"><img src="../images/dreeses.png" width="250px" height="350px"></a>
-                <p style="text-align: center; font-size: 30px; color: black; "> <b>Dresses</b></p>
+                <a href="tops.html"><img src="../images/tops.png" width="250px" height="350px"></a>
+                <p style="text-align: center; font-size: 30px; color: black; "> <b>Tops</b></p>
             </div>
          </div>
     </body>
