--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                <a href="html/tshirt.html"> <img src="images/F67904C4-B3A9-4D2D-A95C-6E1AFC835B40.jpg" width="250px" height="350px"></a>
             </div>
             <div class="box3">
-                <a href="html/dresses.html"><img src="images/A48180C0-D4A1-4C62-BC23-BAB8FAE5DDDE.JPEG" width="250px" height="350px"></a>
+                <a href="html/tops.html"><img src="images/A48180C0-D4A1-4C62-BC23-BAB8FAE5DDDE.JPEG" width="250px" height="350px"></a>
             </div>
          </div>
          <p style=" font-size: 40px; text-align: center; color:crimson; margin-top: 0;"><br>Welcome to He & She<br> Fashion Store!</p>
