--- a/html/dresses.html
+++ b/html/dresses.html
@@ -4,8 +4,7 @@
         <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="../css/kurtis.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <title> Tops  </title>
-        <script src="../js/index.js"></script>
+        <title> Dresses  </title>
     </head>
     <body>
         <header>
@@ -30,41 +29,13 @@
             </nav>
             
         </header>
-        <p style="margin-top: 2%; color: black; font-size: 30px; margin-left: 43%;"> <b>Tops</b></p>
-        <div class="container">
-            <div class="box1">
-                <img src="../images/IMG-3882.png" width="250px" height="350px">
-                <p style="text-align: center; font-size: 20px; color: black; "> <b>Roadstar</b> <br> Solid Tops<br> Rs.899</p>
-            </div>
-            <div class="box2">
+        <p style="margin-top: 2%; color: black; font-size: 30px; margin-left: 43%;"> <b>Dresses</b></p>
+                <div id="container">
 
-                <img src="../images/IMG-3884 (1).png " width="250px" height="350px">
-                <p style="text-align: center; font-size: 20px; color: black; "> <b> Harpa</b> <br>Cut out Crop Top<br> Rs.799</p>
-            </div>
-            <div class="box3">
-                <img src="../images/IMG-3885.png" width="250px" height="350px">
-                <p style="text-align: center; font-size: 20px; color: black; ">  <b> Here & Now</b> <br>Floral print Top<br> Rs.999</p>
-            </div>
-         </div>
-         <div class="container">
-            <div class="box4">
-                <img src="../images/IMG-3886.png" width="250px" height="350px">
-                <p style="text-align: center; font-size: 20px; color: black; "> <b>SASSAFRAS</b> <br>printed Top <br> Rs.995</p>
-            </div>
-            <div class="box5">
-                <img src="../images/IMG-3887.png" width="250px" height="350px">
-                <p style="text-align: center; font-size: 20px; color: black; "><b>FOREVER 21</b> <br> Solid  Twisted Top<br> Rs.1299</p>
-            </div>
-            <div class="box6">
-                <img src="../images/IMG-3888.png" width="250px" height="350px">
-                <p style="text-align: center; font-size: 20px; color: black; "> <b>Veni Vedi Vici</b><br> Cold Shoulder Crop Fitted Top<br>Rs.1170</p>
-            </div>
-         </div>
-         <div class="container">
-            <div class="box7">
-                <img src="../images/IMG-3889.png" width="250px" height="350px">
-                <p style="text-align:center; font-size: 20px; color: black; "> <b> AND</b> <br>Tie-Up Hem Style Top<br> Rs.1699</p>
-            </div>
-         </div>
+        </div>
+       
+        <script src="../js/index.js"></script> 
+      <script src="../js/dress.js"></script>
+   
     </body>
 </html>
