--- a/html/shirt.html
+++ b/html/shirt.html
@@ -5,8 +5,7 @@
         <link rel="stylesheet" href="../css/men.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <title> Shirt  </title>
-        <script src="../js/index.js"></script>
-    </head>
+        </head>
     <body>
         <header>
             <div id="mySidenav" class="sidenav">
@@ -31,40 +30,13 @@
             
         </header>
         <p style="margin-top: 2%; color: black; font-size: 30px; margin-left: 43%;"> <b>Shirts</b></p>
-        <div class="container">
-            <div class="box1">
-                <img src="../images/IMG-3798 (1).JPG" width="250px" height="350px">
-                <p style="text-align: center; font-size: 20px; color: black; "> <b>HERE & NOW</b> <br>Men Regular Fit Casual Shirt<br> Rs.2599</p>
-            </div>
-            <div class="box2">
+         <div id="container">
 
-                <img src="../images/IMG-3799.JPG" width="250px" height="350px">
-                <p style="text-align: center; font-size: 20px; color: black; "> <b> JOHN PLAYERS</b> <br>Men Slim Fit Shirt<br> Rs.3000</p>
-            </div>
-            <div class="box3">
-                <img src="../images/IMG-3800.JPG" width="250px" height="350px">
-                <p style="text-align: center; font-size: 20px; color: black; ">  <b> WRANGLER</b> <br>Men Slim Fit Shirt<br> Rs.1599</p>
-            </div>
-         </div>
-         <div class="container">
-            <div class="box4">
-                <img src="../images/IMG-3802.JPG" width="250px" height="350px">
-                <p style="text-align: center; font-size: 20px; color: black; "> <b>ARROW</b> <br>Slim Fit Casual Shirt<br> Rs.3900</p>
-            </div>
-            <div class="box5">
-                <img src="../images/IMG-3804.JPG" width="250px" height="350px">
-                <p style="text-align: center; font-size: 20px; color: black; "><b>GUESS</b> <br>Regular Fit Check Shirt<br> Rs.2000</p>
-            </div>
-            <div class="box6">
-                <img src="../images/IMG-3805.JPG" width="250px" height="350px">
-                <p style="text-align: center; font-size: 20px; color: black; "> <b>U.S POLO</b><br> Men Slim Fit Shirt <br>Rs.3399</p>
-            </div>
-         </div>
-         <div class="container">
-            <div class="box7">
-                <img src="../images/IMG-3806.JPG" width="250px" height="350px">
-                <p style="text-align: center; font-size: 20px; color: black; "> <b> Mast & Harbour</b> <br> Men Slim Fit Casual Shirt<br> Rs.1699</p>
-            </div>
-         </div>
-    </body>
+        </div>
+       
+        <script src="../js/index.js"></script> 
+      <script src="../js/shirt.js"></script>
+   
+
+        </body>
 </html>
