--- a/html/shorts.html
+++ b/html/shorts.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
     <head>
-        <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
+        <title>SHORTS</title>
         <link rel="stylesheet" href="../css/men.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <title> Shorts  </title>
-        <script src="../js/index.js"></script>
-    </head>
+
+        <meta charset="utf-8">
+     </head>
     <body>
         <header>
             <div id="mySidenav" class="sidenav">
@@ -31,40 +31,11 @@
             
         </header>
         <p style="margin-top: 2%; color: black; font-size: 30px; margin-left: 43%;"> <b>Shorts</b></p>
-        <div class="container">
-            <div class="box1">
-                <img src="../images/IMG-3840.JPG" width="250px" height="350px">
-                <p style="text-align: center; font-size: 20px; color: black; "> <b>NIKE</b> <br>Beach Shorts<br> Rs.2500</p>
-            </div>
-            <div class="box2">
+        <div id="container">
 
-                <img src="../images/IMG-3841.JPG" width="250px" height="350px">
-                <p style="text-align: center; font-size: 20px; color: black; "> <b> ADIDAS</b> <br>Beach Shorts<br> Rs.2000</p>
-            </div>
-            <div class="box3">
-                <img src="../images/IMG-3842.JPG" width="250px" height="350px">
-                <p style="text-align: center; font-size: 20px; color: black; ">  <b> REEBOK</b> <br>Basic Shorts<br> Rs.3000</p>
-            </div>
-         </div>
-         <div class="container">
-            <div class="box4">
-                <img src="../images/IMG-3844.JPG" width="250px" height="350px">
-                <p style="text-align: center; font-size: 20px; color: black; "> <b>HRX</b> <br>Men Regular Fit  Shorts<br> Rs.1900</p>
-            </div>
-            <div class="box5">
-                <img src="../images/IMG-3845.JPG" width="250px" height="350px">
-                <p style="text-align: center; font-size: 20px; color: black; "><b>HERE & NOW</b> <br>Sports Shorts<br> Rs.2000</p>
-            </div>
-            <div class="box6">
-                <img src="../images/IMG-3847.JPG" width="250px" height="350px">
-                <p style="text-align: center; font-size: 20px; color: black; "> <b>HRX</b><br> Men Slim Fit Cheno-Shorts <br>Rs.1900</p>
-            </div>
-         </div>
-         <div class="container">
-            <div class="box7">
-                <img src="../images/IMG-3866.JPG" width="250px" height="350px">
-                <p style="text-align: center; font-size: 20px; color: black; "> <b> Marks & Spencer</b> <br> Denim Shorts<br> Rs.3500</p>
-            </div>
-         </div>
+        </div>
+       
+        <script src="../js/index.js"></script> 
+      <script src="../js/shorts.js"></script>
     </body>
 </html>
