--- a/html/tops.html
+++ b/html/tops.html
@@ -4,8 +4,7 @@
         <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="../css/kurtis.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <title> Dresses  </title>
-        <script src="../js/index.js"></script>
+        <title> Tops  </title>
     </head>
     <body>
         <header>
@@ -30,41 +29,13 @@
             </nav>
             
         </header>
-        <p style="margin-top: 2%; color: black; font-size: 30px; margin-left: 43%;"> <b>Dresses</b></p>
-        <div class="container">
-            <div class="box1">
-                <img src="../images/IMG-3873.png" width="250px" height="350px">
-                <p style="text-align: center; font-size: 20px; color: black; "> <b>Athena</b> <br>Women Solid Sheath Dress <br> Rs.1499</p>
-            </div>
-            <div class="box2">
+        <p style="margin-top: 2%; color: black; font-size: 30px; margin-left: 43%;"> <b>Tops</b></p>
+         <div id="container">
 
-                <img src="../images/IMG-3874.png" width="250px" height="350px">
-                <p style="text-align: center; font-size: 20px; color: black; "> <b> Tokyo Talkies</b> <br>Checks Print Belted Dress <br> Rs.899</p>
-            </div>
-            <div class="box3">
-                <img src="../images/IMG-3875.png" width="250px" height="350px">
-                <p style="text-align: center; font-size: 20px; color: black; ">  <b> Sera</b> <br>Layered Fit & Flare Dress <br> Rs.1499</p>
-            </div>
-         </div>
-         <div class="container">
-            <div class="box4">
-                <img src="../images/IMG-3876.png" width="250px" height="350px">
-                <p style="text-align: center; font-size: 20px; color: black; "> <b>Rare</b> <br>Women Solid Maxi Dress <br> Rs.1599</p>
-            </div>
-            <div class="box5">
-                <img src="../images/IMG-3877.png" width="250px" height="350px">
-                <p style="text-align: center; font-size: 20px; color: black; "><b>Athena</b> <br>Women Solid Wrap Dress <br> Rs.1011</p>
-            </div>
-            <div class="box6">
-                <img src="../images/IMG-3879.png" width="250px" height="350px">
-                <p style="text-align: center; font-size: 20px; color: black; "> <b>Cover Story</b><br> Self Designed Brown Fit and Flare<br>Rs.2854</p>
-            </div>
-         </div>
-         <div class="container">
-            <div class="box7">
-                <img src="../images/IMG-3880.png" width="250px" height="350px">
-                <p style="text-align: center; font-size: 20px; color: black; "> <b> Athena</b> <br>Women Silver Embellished Maxi Dress<br> Rs.2500</p>
-            </div>
-         </div>
+        </div>
+       
+        <script src="../js/index.js"></script> 
+      <script src="../js/tops.js"></script>
+   
     </body>
 </html>
